yamlFiles/ingress-with-lets-encrypt-certs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  annotations:
    kubernetes.io/ingress-class: "nginx"
    cert.manager.io/cluster-issuer: letsencrypty

spec: 
  rules:
  - host: mydomain.com
    http:
    # hots: subdomain.domain.topleveldomain if we have DNS in our cloud provider
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            Name: my-app-service
            port:
              name: my-port-name
              number: 80
  
  tls:
  - hosts: 
    - mydomain.com
    sceretName: my-app-secret # It will be generated by letsencrypt
